# valerie.c

./: .clang-format  .clangd  .flake8  .gitignore  CMakeLists.txt  README.md  References.md  requirements.txt
.github/: FUNDING.yml
examples/: CMakeLists.txt  gb-iter.c  grapheme.c  split.c  tokenizer.c
examples/core/: CMakeLists.txt  alias.c  array.c  lehmer.c  map.c  q8.c  set.c
examples/linear/: CMakeLists.txt  diff.c  e4m3.c  lehmer.c  matmul.c  matrix.c  q8.c  tensor.c
examples/model/: CMakeLists.txt  backward.c  blocks.c  cache.c  embedding.c  forward.c  matrix.c  opt.c  rotary.c  train.c  v.c
examples/tokenizer/: CMakeLists.txt  bpe.c  model.c  predict.c  train.c  vocab.c
examples/utf8/: CMakeLists.txt
include/: byte.h  map.h  memory.h  page.h  path.h  posix.h  regex.h  strext.h  test.h  type.h  unit.h  xorshift.h
include/core/: compare.h  hash.h  lehmer.h  logger.h  map.h  memory.h  page.h  path.h  posix.h  regex.h  set.h  sort.h  strext.h  test.h  type.h
include/linear/: activation.h  q8.h  quant.h  scalar.h  tensor.h  type.h
include/model/: activation.h  blocks.h  matrix.h  opt.h  valerie.h
include/tokenizer/: bpe.h  model.h  vocab.h
include/utf8/: byte.h  grapheme-data.h  grapheme.h  iterator.h  path.h  raw.h  regex.h  string.h
samples/: long.txt  short.txt
src/: byte.c  compare.c  logger.c  map.c  memory.c  page.c  path.c  regex.c  strext.c  test.c  type.c  unit.c  xorshift.c
src/core/: compare.c  hash.c  lehmer.c  logger.c  map.c  memory.c  page.c  path.c  regex.c  set.c  sort.c  strext.c  test.c  type.c
src/linear/: activation.c  compare.c  lehmer.c  q8.c  quant.c  scalar.c  tensor.c  type.c
src/model/: activation.c  blocks.c  matrix.c  opt.c  valerie.c
src/tokenizer/: bpe.c  model.c  vocab.c
src/utf8/: byte.c  codepoint.c  grapheme-data.c  grapheme.c  iterator.c  path.c  raw.c  regex.c  string.c
unicode/: grapheme.py  model.py
